fix horizontal scroll for chrome

--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -105,7 +105,7 @@
     }
 
     @include desktop {
-      margin-right: -55px;
+      margin-right: -45px;
       font-size: 48px;
       grid-column: span 7;
     }
