--- a/src/styles/blocks/_subscribe.scss
+++ b/src/styles/blocks/_subscribe.scss
@@ -87,7 +87,7 @@
     border: none;
 
     @include mobile {
-      padding-inline: 24px;
+      padding-left: 24px;
     }
 
     @include desktop {
